alter swagger
